Fix vertical alignment and readme

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,13 @@
+.root{
+  position: absolute;
+  height: 100%;
+}
+
 .App {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  height: 80%;
 }
 .App > * {
   padding: 20px;
