--- a/frontend/src/components/Part/Part.module.scss
+++ b/frontend/src/components/Part/Part.module.scss
@@ -9,5 +9,7 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        max-height: 95vh;
+        align-content: flex-start;
     }
 }
